# agent

./: .env  .gitignore  DEFAULT_MESSAGE.txt  LAST_RESPONSE.md  LAST_RESPONSE.txt  MESSAGE.txt  MESSAGE_DEFAULT.txt  MODIFICATIONS.md  PROJECT_CONTEXT.md  README.md  README.txt  SYSTEM_PROMPT.txt  TEST_RESULTS.md  TEST_RESULTS验证.md  TEST直接mkdir_RESULTS.md  THIS_RESPONSE.txt  Untitled-2.litcoffee  adapter.py  agent.py  agent_v2.py  agent_v3.py  ball.user.js  banlist.py  build-linux.ps1  chat.py  client.py  command_executor.py  completions.py  config.json  deepseek-adapter.js  deepseek-script.js  deepseek.json  deepseek.py  docker-compose.yml  echo.py  embedding.py  expand.py  file_utils.py  final_acknowledgment.md  final_check.md  (+75 more)
v3/v3/python/: .env.example  .pre-commit-config.yaml  INDEX.md  Makefile  README.md  aiosqlite_example.out  aiosqlite_example.py  argparse_mutual.out  argparse_mutual.py  ast_example.out  ast_example.py  ast_transform.out  ast_transform.py  async_contextmanager_advanced.out  async_contextmanager_advanced.py  async_crawler.out  async_crawler.py  async_crawler_advanced.out  async_crawler_advanced.py  async_generator.out  async_generator.py  asyncio_advanced.out  asyncio_advanced.py  asyncio_producer_consumer.out  asyncio_producer_consumer.py  asyncio_streams.out  asyncio_streams.py  audit_hook.out  audit_hook.py  barrier_example.out  barrier_example.py  beautifulsoup_example.out  beautifulsoup_example.py  black_example.out  black_example.py  bz2_example.out  bz2_example.py  cli_click.py  cli_tool.py  click_advanced.py  (+177 more)
v3/v3/python/myproject/: __init__.py  cli.py
(+373 files in other folders)
