[metadata]
name = myproject
version = 0.1.0
description = A sample Python project
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = you@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.28
    click>=8.0

[options.extras_require]
dev =
    pytest>=7.0
    black>=22.0
    mypy>=0.990

[options.entry_points]
console_scripts =
    mycli = myproject.cli:main
